test/bad/static_typecheck1.prg
assert: false; // Not reached.
if (4) { // Static check: Should be bool

}
